// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`_Fragment already imported > _Fragment already imported 1`] = `
"import { Fragment as _Fragment, Fragment as _Fragment2, createTextVNode as _createTextVNode, createVNode as _createVNode } from 'vue';
const Root1 = () => _createVNode(_Fragment2, null, _createTextVNode("root1"));
const Root2 = () => _createVNode(_Fragment, null, _createTextVNode("root2"));"
`;

exports[`MereProps Order > MereProps Order 1`] = `
"import { createTextVNode as _createTextVNode, mergeProps as _mergeProps, createVNode as _createVNode } from "vue";
_createVNode("button", _mergeProps({
  "loading": true
}, x, {
  "type": "submit"
}), _createTextVNode("btn"));"
`;

exports[`Merge class/ style attributes into array > Merge class/ style attributes into array 1`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("div", {
  "class": ["a", b],
  "style": ["color: red", s]
}, null);"
`;

exports[`TemplateLiteral prop and event co-usage > TemplateLiteral prop and event co-usage 1`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("div", {
  "value": \`\${foo}\`,
  "onClick": () => foo.value++
}, null);"
`;

exports[`Without JSX should work > Without JSX should work 1`] = `
"import { createVNode } from 'vue';
createVNode('div', null, ['Without JSX should work']);"
`;

exports[`Without props > Without props 1`] = `
"import { createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
_createVNode("a", null, _createTextVNode("a"));"
`;

exports[`custom directive > custom directive 1`] = `
"import { resolveComponent as _resolveComponent, resolveDirective as _resolveDirective, createVNode as _createVNode, withDirectives as _withDirectives } from "vue";
_withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("cus"), x]]);"
`;

exports[`custom directive > custom directive 2`] = `
"import { Fragment as _Fragment, resolveComponent as _resolveComponent, resolveDirective as _resolveDirective, createVNode as _createVNode, withDirectives as _withDirectives } from "vue";
_createVNode(_Fragment, null, [_withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("xxx"), x]]), _withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("xxx"), [x]]]), _withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("xxx"), [x, 'y']]]), _withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("xxx"), [x, 'y', ['a', 'b']]]]), _withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("xxx"), [x, ['a', 'b']]]]), _withDirectives(_createVNode(_resolveComponent("A"), null, null), [[_resolveDirective("xxx"), [x, y, ['a', 'b']]]])]);"
`;

exports[`directive in scope > directive in scope 1`] = `
"import { resolveComponent as _resolveComponent, createVNode as _createVNode, withDirectives as _withDirectives } from "vue";
const vXxx = {};
_withDirectives(_createVNode(_resolveComponent("A"), null, null), [[vXxx]]);"
`;

exports[`isCustomElement > isCustomElement 1`] = `
"import { createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
_createVNode("foo", null, _createVNode("span", null, _createTextVNode("foo")));"
`;

exports[`override props multiple > multiple 1`] = `
"import { resolveComponent as _resolveComponent, createVNode as _createVNode } from "vue";
_createVNode(_resolveComponent("A"), {
  "loading": true,
  ...a,
  b: 1,
  c: {
    d: 2
  },
  "class": "x",
  "style": x
}, null);"
`;

exports[`override props single > single 1`] = `
"import { createVNode as _createVNode } from "vue";
_createVNode("div", a, null);"
`;

exports[`passing children via JSX directive in children > directive in children 1`] = `
"import { Fragment as _Fragment, resolveDirective as _resolveDirective, createVNode as _createVNode, withDirectives as _withDirectives, resolveComponent as _resolveComponent } from "vue";
_createVNode(_Fragment, null, [_createVNode(_resolveComponent("A"), null, [_withDirectives(_createVNode("div", null, null), [[_resolveDirective("xxx")]]), foo]), _createVNode(_resolveComponent("A"), null, _createVNode(_resolveComponent("B"), null, [_withDirectives(_createVNode("div", null, null), [[_resolveDirective("xxx")]]), foo]))]);"
`;

exports[`passing children via JSX directive in children, in scope > directive in children, in scope 1`] = `
"import { Fragment as _Fragment, createVNode as _createVNode, withDirectives as _withDirectives, resolveComponent as _resolveComponent } from "vue";
const vXxx = {};
_createVNode(_Fragment, null, [_createVNode(_resolveComponent("A"), null, [_withDirectives(_createVNode("div", null, null), [[vXxx]]), foo]), _createVNode(_resolveComponent("A"), null, _createVNode(_resolveComponent("B"), null, [_withDirectives(_createVNode("div", null, null), [[vXxx]]), foo]))]);"
`;

exports[`passing children via JSX multiple expressions > multiple expressions 1`] = `
"import { resolveComponent as _resolveComponent, createVNode as _createVNode } from "vue";
_createVNode(_resolveComponent("A"), null, [foo, bar]);"
`;

exports[`passing children via JSX no directive in children > no directive in children 1`] = `
"import { Fragment as _Fragment, createVNode as _createVNode, resolveComponent as _resolveComponent } from "vue";
_createVNode(_Fragment, null, [_createVNode(_resolveComponent("A"), null, [_createVNode("div", null, null), foo]), _createVNode(_resolveComponent("A"), null, _createVNode(_resolveComponent("B"), null, [_createVNode("div", null, null), foo]))]);"
`;

exports[`passing children via JSX single expression, function expression > single expression, function expression 1`] = `
"import { resolveComponent as _resolveComponent, createVNode as _createVNode } from "vue";
_createVNode(_resolveComponent("A"), null, () => "foo");"
`;

exports[`passing children via JSX single expression, non-literal value > single expression, non-literal value 1`] = `
"import { resolveComponent as _resolveComponent, createVNode as _createVNode } from "vue";
const foo = () => 1;
_createVNode(_resolveComponent("A"), null, foo());"
`;

exports[`reassign variable as component > reassign variable as component 1`] = `
"import { defineComponent, createVNode as _createVNode } from 'vue';
let a = 1;
const A = defineComponent({
  setup(_, {
    attrs
  }) {
    return () => _createVNode("span", null, attrs.foo);
  }
});
const _a2 = 2;
a = _a2;
a = _createVNode(A, null, a);"
`;

exports[`set pragma to custom > custom 1`] = `
"import { createTextVNode as _createTextVNode } from "vue";
custom("div", null, _createTextVNode("pragma"));"
`;

exports[`should keep \`import * as Vue from "vue"\` > should keep \`import * as Vue from "vue"\` 1`] = `
"import { createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
import * as Vue from 'vue';
_createVNode("div", null, _createTextVNode("Vue"));"
`;

exports[`single no need for a mergeProps call > single no need for a mergeProps call 1`] = `
"import { createTextVNode as _createTextVNode, createVNode as _createVNode } from "vue";
_createVNode("div", x, _createTextVNode("single"));"
`;

exports[`specifiers should be merged into a single importDeclaration > specifiers should be merged into a single importDeclaration 1`] = `
"import { createVNode, Fragment as _Fragment, createVNode as _createVNode } from 'vue';
import { vShow } from 'vue';
_createVNode(_Fragment, null, null);"
`;

exports[`use "@jsx" comment specify pragma > use "@jsx" comment specify pragma 1`] = `
"import { createTextVNode as _createTextVNode } from "vue";
/* @jsx custom */
custom("div", {
  "id": "custom"
}, _createTextVNode("Hello"));"
`;

exports[`v-show > v-show 1`] = `
"import { createTextVNode as _createTextVNode, vShow as _vShow, createVNode as _createVNode, withDirectives as _withDirectives } from "vue";
_withDirectives(_createVNode("div", null, _createTextVNode("vShow")), [[_vShow, x]]);"
`;
